--- a/CSharpUtilsNETStandard/CSharpUtilsNETStandard.csproj
+++ b/CSharpUtilsNETStandard/CSharpUtilsNETStandard.csproj
@@ -16,6 +16,7 @@
     <Version>0.9.0</Version>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Product>CSharpUtilsNETStandard</Product>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
